<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimayLight"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        style="@style/Toolbar"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/guillotine_hamburger"
            style="@style/ImageView.Hamburger"
            android:src="@drawable/ic_menu" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/liProfile"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"
        style="@style/LinearLayout.GuillotineItem"
        android:layout_marginTop="@dimen/guillotine_medium_margin">

        <ImageView
            android:id="@+id/profileImg"
            style="@style/ImageView.GuillotineItem" />

        <com.wedevgroup.weflyhelperfordriver.utils.design.CanaroTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/profile" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/liRecovery"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            android:id="@+id/recoveryImg"
            style="@style/ImageView.GuillotineItem" />

        <com.wedevgroup.weflyhelperfordriver.utils.design.CanaroTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/recovery" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/liHelp"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            android:id="@+id/helpImg"
            style="@style/ImageView.GuillotineItem" />

        <com.wedevgroup.weflyhelperfordriver.utils.design.CanaroTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/help" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/liAbout"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            android:id="@+id/aboutImg"
            style="@style/ImageView.GuillotineItem" />

        <com.wedevgroup.weflyhelperfordriver.utils.design.CanaroTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/about" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/liLogout"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            android:id="@+id/logoutImg"
            style="@style/ImageView.GuillotineItem" />

        <com.wedevgroup.weflyhelperfordriver.utils.design.CanaroTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/logout"  />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/guillotine_divider_height" />

    <RelativeLayout
       android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content">

        <io.ghyeok.stickyswitch.widget.StickySwitch
            android:id="@+id/langSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:ss_animationDuration="600"
            app:ss_iconPadding="18dp"
            app:ss_iconSize="22dp"
            app:ss_leftIcon="@drawable/ic_male"
            app:ss_leftText="@string/english"
            app:ss_rightIcon="@drawable/ic_female"
            app:ss_rightText="@string/french"
            app:ss_selectedTextSize="14sp"
            app:ss_sliderBackgroundColor="@color/white_20"
            app:ss_switchColor="@color/material_blue_600"
            app:ss_textColor="@color/white"
            app:ss_textSize="12sp"
            app:ss_animationType="line"
            app:ss_textVisibility="visible" />
    </RelativeLayout>
</LinearLayout>