<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/nestedSrView"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_profile">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:padding="10dp">
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/general"
           android:padding="10dp"
           android:background="@color/colorPrimaryDark"
           android:textColor="#ffffff"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/user_name"/>
            <TextView
                android:id="@+id/userNameTView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text=""/>

        </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:paddingTop="5dp"
           android:paddingBottom="5dp">
           <TextView
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:text="@string/first_name"/>
           <TextView
               android:id="@+id/firstNameTView"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:text=""/>

       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:paddingTop="5dp"
           android:paddingBottom="5dp">
           <TextView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text="@string/last_name"
               android:layout_weight="1" />
           <TextView
               android:id="@+id/lastNameTView"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text=""
               android:layout_weight="1" />

       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:paddingTop="5dp"
           android:paddingBottom="5dp">
           <TextView
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:text="@string/email"/>
           <TextView
               android:id="@+id/emailTVIew"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:text=""/>

       </LinearLayout>


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:paddingTop="5dp"
           android:paddingBottom="5dp">
           <TextView
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:text="@string/phone"/>
           <TextView
               android:id="@+id/phoneTView"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:text=""/>

       </LinearLayout>





       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:padding="10dp"
           android:text="@string/entreprise"
           android:layout_marginTop="@dimen/language_margin_top"
           android:background="@color/colorPrimaryDark"
           android:textColor="#ffffff"/>


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:paddingTop="5dp"
           android:paddingBottom="5dp">
           <TextView
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:text="@string/name"/>
           <TextView
               android:id="@+id/enterNameTView"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:text=""/>

       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:paddingTop="5dp"
           android:paddingBottom="5dp">
           <TextView
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:text="@string/layer"/>
           <TextView
               android:id="@+id/layerTView"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:text=""/>

       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:paddingTop="5dp"
           android:paddingBottom="5dp">
           <TextView
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:text="@string/function"/>
           <TextView
               android:id="@+id/funcTView"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:text=""/>

       </LinearLayout>
   </LinearLayout>
</android.support.v4.widget.NestedScrollView>
